@@ -5,4 +5,5 @@ endif()
 add_subdirectory(auth-by-ip)
 add_subdirectory(client-properties)
 add_subdirectory(connection-state)
+add_subdirectory(delayed-auth)
 add_subdirectory(payload-modification)
