@@ -1,0 +1,7 @@
+listener 1883
+
+plugin ./mosquitto_delayed_auth.so
+
+
+sys_interval 1
+log_timestamp_format %Y-%m-%dT%H:%M:%S
