@@ -1,0 +1,3 @@
+#!/bin/sh
+
+../../src/mosquitto -c test.conf -v
