@@ -18,6 +18,7 @@ Broker:
 - Report on what compile time options are enabled. Closes #2193.
 - Add `--tls-keylog` option which can be used to generate a file that can be
   used by wireshark to decrypt TLS traffic for debugging purposes. Closes #1818.
+- Add support for delayed basic authentication in plugins.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
